--- a/src/styles/Winner.css
+++ b/src/styles/Winner.css
@@ -10,7 +10,6 @@
 
 .winners-title {
   color: #fff;
-  margin-bottom: 100px;
   font-size: 5rem;
 }
 
@@ -109,8 +108,12 @@
     font-size: 2.5rem;
   }
 
+  .winners-images {
+    gap: 1rem;
+  }
+
   .winner-image {
-    width: 80px;
+    width: 100px;
   }
 
   .winners-links h2 {
